--- a/TypeScript/3.avancado/tsconfig.json
+++ b/TypeScript/3.avancado/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "app/dist/js",
+        "outDir": "dist/js",
         "target": "ES6",
         "noEmitOnError": true,
         "noImplicitAny": true,
