--- a/TypeScript/2.intermediario/tsconfig.json
+++ b/TypeScript/2.intermediario/tsconfig.json
@@ -1,12 +1,11 @@
 {
     "compilerOptions": {
-        "outDir": "app/dist/js",
+        "outDir": "dist/js",
         "target": "ES6",
         "noEmitOnError": true,
         "noImplicitAny": true,
         "removeComments": true,
-        "strictNullChecks": true,
-        "experimentalDecorators": true
+        "strictNullChecks": true
     },
     "include": ["app/**/*"]
 }
